# channel-order

./: .gitignore  README.md  config.yml  main.py  pyproject.toml  test.py
channel_order/: app.py  config.py  dataset.py  model.py
tests/: test_channel_order.py
